# aitools

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLATFORM_DIFFERENCES_ANALYSIS.md  PROPOSED_FIX.md  README.md  config.py  face_blender.py  face_detector.py  face_enhancer.py  face_recognizer.py  face_swapper.py  gemma4_4b.py  main.py  nvfp4.trace3  pipeline.py  pyproject.toml  requirements.txt  video_io.py
chararep/: __init__.py  __main__.py  config.py  face_blender.py  face_detector.py  face_enhancer.py  face_recognizer.py  face_swapper.py  gpu_utils.py  improve_swap  main.py  pipeline.py  video_io.py
doc/: API_AND_TESTING.md  CHARAREP.md  INSTALLATION.md  PORTRAIT_PREP.md  VICROP.md  VIDEO_JITTER_FIX.md  VIDESC.md
face_ops/: __init__.py  backend.py  clustering.py  dlib_backend.py  insightface_backend.py  mixin.py  testing.py  types.py
portrait_prep/: __init__.py  augment.py  caption.py  cli.py  convert.py  cpcap.py  crop.py  face_utils.py
scripts/: install_basicsr.py
testb21/in/: .gitattributes
tests/: __init__.py  conftest.py  test_augment.py  test_caption.py  test_chararep_config.py  test_chararep_face_blender.py  test_chararep_face_detector.py  test_chararep_face_enhancer.py  test_chararep_face_recognizer.py  test_chararep_face_swapper.py  test_chararep_gpu_utils.py  test_chararep_pipeline.py  test_convert.py  test_coverage_targeted.py  test_cpcap.py  test_crop.py  test_face_ops.py  test_main.py  test_new_coverage.py  test_pipeline_timers.py  test_ref.py  test_vicrop.py  test_video_io.py  test_videsc.py  test_videsc_coverage2.py  test_videsc_helpers.py  test_videsc_main.py  test_videsc_sampling.py  test_videsc_vllm.py
vicrop/: __init__.py  cli.py  crop.py  ref.py  segment.py
videsc/: __init__.py  cli.py  config.py  describe.py  main.py  nvfp4.trace  nvfp4.trace2  nvfp4.trace4  wd_cli.py
videsc/audio/: transcription.py
videsc/cli/: __init__.py  args.py
videsc/model/: loader.py  vllm_client.py
videsc/pipeline/: prompts.py  runner.py  vllm_runner.py
videsc/utils/: helpers.py
videsc/video/: info.py  messages.py  sampling.py
