[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitools"
version = "0.1.0"
description = "AI dataset preparation toolkit: portrait prep, video face-crop, and video description"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["diffusion", "lora", "dataset", "portrait", "video", "augmentation", "captioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "albumentations>=1.4.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "face_recognition>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "onnxruntime>=1.17.0",
    "huggingface_hub>=0.22.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.17.0"]
youtube = ["yt-dlp"]
vl = [
    "torch",
    "torchvision",
    "transformers>=4.57.3",
    "accelerate",
    "bitsandbytes",
    "soundfile",
    "qwen-vl-utils",
    "qwen-omni-utils",
    "torchsummary",
]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
portrait-prep = "portrait_prep.cli:main"
vicrop = "vicrop.cli:main"
videsc = "videsc.wd_cli:main"
videsc-vl = "videsc.main:main"

[project.urls]
Repository = "https://github.com/otherroch/aitools"

[tool.setuptools.packages.find]
where = ["."]
include = ["portrait_prep*", "vicrop*", "videsc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["portrait_prep", "vicrop", "videsc"]
omit = ["tests/*"]
