[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chararep"
version = "0.1.0"
description = "Face-swap character replacement video pipeline"
authors = [{ name = "chararep developers", email = "dev@chararep.example.com" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Editors :: Video",
]
requires-python = ">=3.10"

[project.scripts]
chararep = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "config",
    "pipeline",
    "face_blender",
    "face_detector",
    "face_enhancer",
    "face_recognizer",
    "face_swapper",
    "gpu_utils",
    "video_io",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = [
    "config",
    "video_io",
    "face_blender",
    "face_detector",
    "face_recognizer",
    "face_enhancer",
    "face_swapper",
    "gpu_utils",
    "pipeline",
    "main",
]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
"if verbose:",
"if timings:",
"if timers:",
"if timers_all:",
"elif timers:",
"except Exception:",
"except ImportError:",
"parser.error",
]

