[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitools"
version = "0.1.0"
description = "AI dataset preparation toolkit: portrait prep, video face-crop, and video description"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["diffusion", "lora", "dataset", "portrait", "video", "augmentation", "captioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

[dependency-groups]
base = [
    "albumentations>=1.4.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "face_recognition>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "onnxruntime>=1.17.0",
    "huggingface_hub>=0.22.0",
]
gpu = ["onnxruntime-gpu>=1.17.0"]
insightface = ["insightface>=0.7.3", "onnxruntime>=1.17.0"]
chararep = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "insightface>=0.7.3",
    "torch>=2.2",
    "torchvision>=0.17",
    "gfpgan>=1.3.8",
    "realesrgan>=0.3.0",
    "onnxruntime-gpu>=1.17.0; platform_machine not in 'arm aarch64 arm64 armv7l armv8l'",
    "onnxruntime>=1.17.0; platform_machine in 'arm aarch64 arm64 armv7l armv8l'",
]
youtube = ["yt-dlp"]
vl = [
    "torch",
    "torchvision",
    "torchcodec",
    "transformers>=4.57.3",
    "accelerate",
    "bitsandbytes",
    "soundfile",
    "qwen-vl-utils",
    "qwen-omni-utils",
    "torchsummary",
    "decord; platform_machine not in 'arm aarch64 arm64 armv7l armv8l'",  # decord not supported on ARM
]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
portrait-prep = "portrait_prep.cli:main"
vicrop = "vicrop.cli:main"
videsc = "videsc.main:main"
chararep = "chararep.main:main"

[project.urls]
Repository = "https://github.com/otherroch/aitools"

[tool.setuptools.packages.find]
where = ["."]
include = ["chararep*", "face_ops*", "portrait_prep*", "vicrop*", "videsc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["chararep", "face_ops", "portrait_prep", "vicrop", "videsc"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
"if verbose:",
"if timings:",
"if timers:",
"if timers_all:",
"elif timers:",
"except Exception:",
"except ImportError:",
"parser.error",
]
